exploitation/k8s/storage/csi_nfs_smb/nfs/04-svc-democsishare-nfs.yml
---
  kind: Service
  apiVersion: v1
  metadata:
    name: svc-democsishare-nfs
    namespace: nom-namespace
    labels:
      application: nfs
  spec:
    ports:
      - name: http
        port: 80
        protocol: TCP
        targetPort: 80
    selector:
      application: nfs
